# Nepal-Industrial-Decarbonization

./: .gitignore  BRANCH_POLICY.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAY-10-11-SPEC.md  Dockerfile  LICENSE  LIMITATIONS.md  README.md  SECURITY.md  START-HERE.txt  TEAM_CHARTER.md  git-push.sh  render.yaml
pro/: .gitignore  Dockerfile  LIVE_DEPLOYMENT.md  README.md  constraints.txt  demo_live.html  docker-compose.yml  explorer.html  pyproject.toml
pro/.venv_live/: pyvenv.cfg
pro/app/: Home.py
pro/app/pages/: 1_Cement_Baseline.py
pro/demo-output/: calibration_result.json  planta_cooler_pid.json
pro/deploy/: RUNBOOK.md
pro/deploy/backup/: backup.sh  restore.sh
pro/deploy/hss/: deploy_production.sh
pro/deploy/one-click/: fly.toml  railway.json
pro/deploy/terraform/: main.tf
pro/deploy/vllm/: chat_template.jinja  docker-compose.yml  serve.sh
pro/deploy/vps/: deploy.sh  docker-compose.yml
pro/deploy/vps/monitoring/: alerts.yml  prometheus.yml
pro/deploy/vps/mosquitto/: acl  mosquitto.conf
pro/deploy/vps/scripts/: init-db.sql
pro/docs/: COMMISSIONING.md  DEPLOYMENT_ROADMAP.md  INDUSTRIAL_SCOPE.md  OPERATOR_MANUAL.md  OUTREACH.md  PILOT_DEPLOYMENT.md  PILOT_TEST_PROTOCOL.md  PLANT_ONBOARDING.md  RATING_95_PLUS.md  RATING_9_10.md
pro/helm/: Chart.yaml  values.yaml
pro/helm/templates/: deployment.yaml  service.yaml
pro/launchers/: nepal-decarb.bat  nepal-decarb.ps1
pro/nepal_decarb_pro/: __init__.py  api.py  cli.py  cli.py.click_backup  server.py
pro/nepal_decarb_pro/audit/: __init__.py  trail.py
pro/nepal_decarb_pro/auth/: __init__.py  rbac.py
pro/nepal_decarb_pro/cad/: __init__.py  dxf_writer.py
pro/nepal_decarb_pro/core/: __init__.py  brick.py  cement.py  cement_chemistry.py  factors.py  fuel_blend.py  multi_objective.py  uncertainty.py
pro/nepal_decarb_pro/data/: emission_factors.yaml  nepal_plants.yaml
pro/nepal_decarb_pro/dt/: __init__.py  twin.py
pro/nepal_decarb_pro/firmware/: esp32_sensor.ino
pro/nepal_decarb_pro/forecasting/: __init__.py  models.py
pro/nepal_decarb_pro/i18n/: __init__.py
pro/nepal_decarb_pro/industrial/: __init__.py  aspen_export.py  historian.py  matlab_export.py  modbus_client.py  opcua_client.py
pro/nepal_decarb_pro/io/: __init__.py  csv_loader.py  database.py  excel_loader.py  mqtt_bridge.py
pro/nepal_decarb_pro/lca/: __init__.py  characterization.py  engine.py
pro/nepal_decarb_pro/llm/: __init__.py  advisor.py  serve.py
pro/nepal_decarb_pro/markets/: __init__.py  gold_standard.py  pricing.py  tokenization.py  verra.py
pro/nepal_decarb_pro/pinch/: __init__.py  analysis.py
pro/nepal_decarb_pro/registry/: __init__.py  plants.py
pro/nepal_decarb_pro/reporting/: __init__.py  pdf.py
pro/nepal_decarb_pro/sim/: __init__.py  brick_dynamics.py  cad_export.py  equipment_specs.py  industrial_equipment.py  kiln_dynamics.py  process_flows.py
pro/nepal_decarb_pro/standards/: __init__.py  extra_standards.py  gcca.py  ghg_protocol.py  iso_14001.py  iso_14064.py  iso_50001.py  pcaf.py  sbti.py  tcfd.py
pro/reports/: hetauda_full_results.json  hetauda_kiln.FCMacro  hetauda_kiln.dxf  hetauda_pilot_results.json
pro/scripts/: full_demo.py  run_pilot.py  serve_live.py  verify_deployment.py
pro/site/: index.html
pro/src/nepal_decarb_pro/: __init__.py  cli.py  server.py
pro/tests/: conftest.py  test_core.py  test_extended.py  test_lca.py  test_llm_advisor.py  test_markets.py  test_optimization.py  test_server.py  test_setup.py  test_sim.py  test_standards.py
tools/01-baseline-emissions-mrv/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
tools/01-baseline-emissions-mrv/app/: Home.py
tools/01-baseline-emissions-mrv/app/pages/: 1_Cement_Baseline.py  2_Brick_Baseline.py  3_Project_Activity.py  4_Sector_Benchmarking.py  5_Methodology.py  6_About.py
tools/01-baseline-emissions-mrv/data/: emission_factors.yaml
tools/01-baseline-emissions-mrv/docs/: methodology.md
tools/01-baseline-emissions-mrv/reports/: bhairahawa_brick_results.json  hetauda_cement_project_results.json
tools/01-baseline-emissions-mrv/scripts/: example_brick_terai.py  example_hetauda.py
tools/01-baseline-emissions-mrv/src/nepal_mrv/: __init__.py  brick.py  cement.py  cli.py  emission_factors.py  mrv.py  reporting.py
tools/01-baseline-emissions-mrv/tests/: __init__.py  conftest.py  test_brick.py  test_cement.py  test_emission_factors.py  test_mrv.py
tools/02-kiln-dynamics-simulator/: .gitignore  README.md  pyproject.toml
tools/02-kiln-dynamics-simulator/app/: Home.py
tools/02-kiln-dynamics-simulator/day-08-PRs/: export_hetauda_kiln_step.py
tools/02-kiln-dynamics-simulator/day-08-PRs/cad/: hetauda_kiln_assembly.step
tools/02-kiln-dynamics-simulator/matlab/: kiln_rhs.m
tools/02-kiln-dynamics-simulator/src/nepal_kiln_sim/: __init__.py  calibration.py  cli.py  fuels.py  io.py  kiln_ode.py  plants.py  sensitivity.py
tools/02-kiln-dynamics-simulator/tests/: test_calibration.py  test_fuels.py  test_io.py  test_kiln_ode.py  test_plants.py  test_sensitivity.py
tools/03-cooler-grate-simulator/: .gitignore  README.md  pyproject.toml
tools/03-cooler-grate-simulator/day-03-PRs/: _smoke_check_artifact.py
tools/03-cooler-grate-simulator/day-03-PRs/ai-ml-engineer/: llm_advisor_spec.md  rag_corpus_manifest.md  todos.md
tools/03-cooler-grate-simulator/day-03-PRs/business-lead/: competitor_landscape.md  pilot_scope.md  pricing_math.md  sales_one_pager.md
tools/03-cooler-grate-simulator/day-04-PRs/: generate_synthetic_plant_data.py  generate_v032_consistent_synthetic.py
tools/03-cooler-grate-simulator/day-06-PRs/: export_metadata.py  export_v050_cooler_step.py  viewer.html
tools/03-cooler-grate-simulator/day-09-PRs/: export_pid_cooler.py
tools/03-cooler-grate-simulator/demo_site/: index.html  step_viewer.html  style.css  v050_cooler_assembly.step
tools/03-cooler-grate-simulator/reviews/: AANYA-DAY-03-REVIEW.md
tools/03-cooler-grate-simulator/scratch/: smoke_4plants_v0.3.2.py
tools/03-cooler-grate-simulator/tests/: conftest.py
(+149 files in other folders)
