[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepal_decarb_pro"
version = "1.0.0"
description = "World-class industrial decarbonization platform for Nepal's cement & brick industry. Tier 3 physics, Monte Carlo UQ, MILP optimization, full LCA, pinch analysis, Verra/GS pipeline, ISO 14064, TCFD, SBTi, GCCA, PCAF. Open source."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Nishchal Baniya", email = "nishchal.baniya@himalayancarbonnepal.com"},
]
keywords = [
  "carbon", "cement", "brick", "nepal", "decarbonization", "mrv", "verra",
  "gold-standard", "iso14064", "tcfd", "sbti", "gcca", "pcaf", "lca",
  "pinch", "monte-carlo", "milp", "optimization", "iot", "blockchain",
  "open-source", "engineering",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Environment",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  # Numerical / scientific
  "numpy>=1.24",
  "scipy>=1.11",
  "pandas>=2.0",
  "numba>=0.58",
  # Data validation
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  # Data formats
  "pyyaml>=6.0",
  "tomli>=2.0",
  "openpyxl>=3.1",
  "pyarrow>=14.0",
  # Visualization
  "matplotlib>=3.7",
  "plotly>=5.18",
  "folium>=0.15",
  "streamlit-folium>=0.18",
  # Web
  "streamlit>=1.30",
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "websocket-client>=1.6",
  "jinja2>=3.1",
  # IoT
  "paho-mqtt>=1.6",
  # Optimization
  "pyomo>=6.6",
  # Reporting
  "fpdf2>=2.7",
  "reportlab>=4.0",
  "weasyprint>=60.0",
  "markdown>=3.5",
  # CLI
  "click>=8.1",
  "rich>=13.0",
  "tabulate>=0.9",
  "tqdm>=4.66",
  # Bilingual
  "babel>=2.13",
  # Auth / security
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  # Misc
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.21",
  "mypy>=1.7",
  "ruff>=0.1",
  "pre-commit>=3.5",
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
]
ml = [
  "torch>=2.1",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "prophet>=1.1",
]
sol = [
  "web3>=6.0",
  "eth-account>=0.10",
]
geo = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
]
full = [
  "nepal_decarb_pro[dev,ml,sol,geo]",
]

[project.scripts]
nepal-decarb = "nepal_decarb_pro.cli:main"
nepal-decarb-api = "nepal_decarb_pro.api:run"
nepal-decarb-mqtt = "nepal_decarb_pro.io.mqtt_bridge:run"

[project.urls]
Homepage = "https://github.com/himalayancarbon/nepal-decarb"
Documentation = "https://nepal-decarb.readthedocs.io"
Repository = "https://github.com/himalayancarbon/nepal-decarb"
Issues = "https://github.com/himalayancarbon/nepal-decarb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nepal_decarb_pro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "PT", "RET", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
