[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepal-kiln-sim"
version = "0.2.0"
description = "Day 2 of 20-day suite — physics-based dynamic simulator for rotary cement kilns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Nishchal Baniya", email = "nishchal.baniya@himalayancarbonnepal.com"},
  {name = "Mavis (Day 2 build)"},
]
keywords = [
  "cement", "kiln", "rotary-kiln", "decarbonization", "nepal",
  "process-simulation", "carbon-capture", "process-engineering", "preheater",
  "calciner", "clinker", "alternative-fuels", "biomass", "circular-economy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Engineering",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Environment",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pydantic>=2.0",
  "pandas>=2.0",
  "streamlit>=1.30",
  "plotly>=5.18",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "mypy>=1.7",
]
full = [
  "streamlit>=1.30",
  "plotly>=5.18",
]

[project.scripts]
nepal-kiln-sim = "nepal_kiln_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not slow'"
markers = [
    "slow: marks tests as slow (run with -m slow)",
]
